k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 annotations:
  kubernetes.io/ingress.class: nginx
  nginx.ingress.kubernetes.io/use-regex: 'true'
  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
  - http:
     paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
         service: 
          name: client-cluster-ip-service
          port:
           number: 3000
      - path: /api/?(.*)
        pathType: Prefix
        backend:
         service:
          name: server-cluster-ip-service
          port:
           number: 5000
